<resources>
    <string name="app_name">YikesYak</string>
    <string name="sign_out">Sign Out</string>
    <string name="yikes_yak">Yikes Yak</string>
    <string name="confessional">Confessional</string>
    <string name="q_a"><![CDATA[Q&A]]></string>
    <string name="compliments">Compliments</string>
    <string name="type_a_new_post">Type a new post</string>
    <string name="post">Post</string>
    <string name="top">Top</string>
    <string name="comments">COMMENTS</string>
    <string name="PrefsFile">MyPrefzFile</string>
    <string name="CompPostsKey">CompPostsKey</string>
    <string name="QAPostsKey">QAPostsKey</string>
    <string name="ConfeshPostsKey">ConfeshPostsKey</string>

</resources>
