<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.demouser.yikesyak.MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="461dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="298dp"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="420dp"
        android:layout_marginEnd="125dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:text="@string/yikes_yak"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginBottom="268dp"
        android:layout_marginEnd="125dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="40dp"
        android:text="@string/confessional"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button6"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginBottom="158dp"
        android:layout_marginEnd="125dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="40dp"
        android:text="@string/q_a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginBottom="41dp"
        android:layout_marginEnd="125dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="40dp"
        android:text="@string/compliments"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

</android.support.constraint.ConstraintLayout>
