<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.demouser.yikesyak.HomePage">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="458dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="296dp"
        android:layout_marginTop="2dp"
        android:background="#00AAEE"
        android:text="@string/sign_out"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="250dp"
        android:layout_height="57dp"
        android:layout_marginBottom="420dp"
        android:layout_marginEnd="125dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="80dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/yikes_yak"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@android:color/darker_gray"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginBottom="268dp"
        android:layout_marginEnd="125dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="40dp"
        android:background="#00AAEE"
        android:text="@string/confessional"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button6"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginBottom="158dp"
        android:layout_marginEnd="125dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="40dp"
        android:background="#00AAEE"
        android:text="@string/q_a"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginBottom="41dp"
        android:layout_marginEnd="125dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="40dp"
        android:background="#00AAEE"
        android:text="@string/compliments"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

</android.support.constraint.ConstraintLayout>
